# rust-notecli

./: .dockerignore  Cargo.toml  Dockerfile  README.md  notes.json
.github/workflows/: ci.yml
src/: main.rs  note.rs  tui.rs
tests/: notecli.rs
