[package]
name = "notecli"
version = "0.1.0"
edition = "2024"
authors = ["Deniz Akbas <dnz.akbs@gmail.com>"]
description = "A simple Rust CLI tool for managing notes"
license = "MIT"
repository = "https://github.com/Balrahn07/rust-notecli"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "notecli"
path = "src/main.rs"